# C_AST_Mutation

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_src  Makefile_docker  README.md  run.sh  run_new.sh
introclass3/introclass:smallest:90a14c:001/: oracle.c.patch
introclass3/introclass:smallest:90a14c:001/patched/: smallest.cexpr_stmt_8_2.cocci4.c
introclass3/introclass:smallest:90a14c:001/patches/: smallest.cexpr_stmt_8_2.cocci4.txt
introclass3/introclass:smallest:93f87b:000/: oracle.c.patch
introclass3/introclass:smallest:93f87b:000/patched/: smallest.cexpr_stmt_8_2.cocci4.c
introclass3/introclass:smallest:93f87b:000/patches/: smallest.cexpr_stmt_8_2.cocci4.txt
introclass3/introclass:smallest:93f87b:001/: oracle.c.patch
introclass3/introclass:smallest:93f87b:001/patches/: smallest.cexpr_stmt_8_2.cocci4.txt
introclass3/introclass:smallest:97f6b1:000/: oracle.c.patch
introclass3/introclass:smallest:97f6b1:000/patched/: smallest.cexpr_stmt_8_2.cocci4.c
introclass3/introclass:smallest:97f6b1:000/patches/: smallest.cexpr_stmt_8_2.cocci4.txt
introclass3/introclass:smallest:97f6b1:001/: oracle.c.patch
introclass3/introclass:smallest:97f6b1:001/patches/: smallest.cexpr_stmt_8_2.cocci4.txt
introclass3/introclass:smallest:97f6b1:002/: oracle.c.patch
introclass3/introclass:smallest:97f6b1:002/patches/: smallest.cexpr_stmt_8_2.cocci4.txt
scripts/: checksum.c  mutationClang.py  mutationClang_intraclass.py  patch.py  test.patch  test.py
scripts/~/.srciror/: coverage
src/: mutator.cpp
